--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="app">
 <head>
-    <title>开放静态文件 CDN - 为开源库提供稳定、快速的免费 CDN 服务</title>
+    <title>多引擎词典查询 - 记录查询历史，复习生词，推荐学习资源</title>
     <meta name="viewport" content="width=device-width initial-scale=1.0 maximum-scale=1.0"/>
     <meta charset="utf-8"/>
     <link rel="stylesheet" href="static/css/style.css"/>
 </head>
-<body>
+<body ng-controller="fetchData">
     <div class="head">
         <div id="header">
             <a href="staticfile.org" id="title">Kill Words 词典</a>
@@ -17,13 +17,13 @@
             </ul>
         </div>
         <div id="purpose">
-            <p>我们的目标是提供这样一个词典，让它尽可能的查到你想查的单词和想翻译的句子，并免费为之提供查询结果。同时，我们也提供搜索查询历史和生词笔记的入口，让所有人都复习自己查过的单词。</p>
-        <pre>在搜索框中输入单词 <small>// <a href="https://github.com/staticfile/cli#readme">查看详细说明</a></small></pre>
+            <p>我们的目标是提供这样一个词典：它能查到你想查的单词和想翻译的句子。同时，也提供搜索查询历史和生词笔记的入口，让所有人都能复习自己查过的单词，而不是查过就算了。</p>
+        <pre>如何使用：在搜索框中输入要查询的内容 <small>// <a href="https://github.com/staticfile/cli#readme">点击查看说明</a></small></pre>
         </div>
-        <div id="search"><input type="text" placeholder="输入词语或句子..." autofocus=""/></div>
+        <div id="search"><input type="text" placeholder="请输入查询内容 .." autofocus autocomplete="off"/></div>
         <div class="gh-info">
-            <iframe ng-src="http://ghbtns.com/github-btn.html?user=staticfile&amp;repo=static&amp;type=watch&amp;count=true" allowtransparency="true" frameborder="0" height="20px" scrolling="0" width="85px" src="http://ghbtns.com/github-btn.html?user=staticfile&amp;repo=static&amp;type=watch&amp;count=true"></iframe>
-            <iframe ng-src="http://ghbtns.com/github-btn.html?user=staticfile&amp;repo=static&amp;type=fork&amp;count=true" allowtransparency="true" frameborder="0" scrolling="0" width="95" height="20" src="http://ghbtns.com/github-btn.html?user=staticfile&amp;repo=static&amp;type=fork&amp;count=true"></iframe>
+            <iframe ng-src="http://ghbtns.com/github-btn.html?user=sunivengg&amp;repo=Kill_Words&amp;type=watch&amp;count=true" allowtransparency="true" frameborder="0" height="20px" scrolling="0" width="85px" src="http://ghbtns.com/github-btn.html?user=sunivengg&amp;repo=Kill_Words&amp;type=watch&amp;count=true"></iframe>
+            <iframe ng-src="http://ghbtns.com/github-btn.html?user=sunivengg&amp;repo=Kill_Words&amp;type=fork&amp;count=true" allowtransparency="true" frameborder="0" scrolling="0" width="95" height="20" src="http://ghbtns.com/github-btn.html?user=sunivengg&amp;repo=Kill_Words&amp;type=fork&amp;count=true"></iframe>
         </div>
     </div>
     <div class="hot-libs">
@@ -37,62 +37,64 @@
     </div>
     <div class="libs">
         <div class="lib">
-            <h2>jquery</h2>
-            <p class="description">
-                jQuery is a fast and concise JavaScript Library that simplifies HTML document traversing, event handling, animating, and Ajax interactions for rapid web development. jQuery is designed to change the way that you write JavaScript.
-            </p>
+            <h2>risk</h2>
             <table>
                 <tbody>
                     <tr>
-                        <th><small>[最新版]</small>2.1.0</th>
+                        <th>基本词典</th>
                         <td>
-                            <pre>
-                                <code>http://cdn.staticfile.org/jquery/2.1.0/jquery.js</code>
-                                <code>http://cdn.staticfile.org/jquery/2.1.0/jquery.js</code>
-                                <code>http://cdn.staticfile.org/twitter-bootstrap/3.1.1/css/bootstrap-theme.css</code>
-                            </pre>
+                            <h5 class="pronounce">[risk]</h5>
+                            <ul class="meaning">
+                                <li><i>n. </i>风险；危险；冒险</li>
+                                <li><i>vt. </i>冒…的危险</li>
+                                <li><i>n. </i>(Risk)人名；(英、阿拉伯)里斯克</li>
+                                <li>超级大火锅。</li>
+                            </ul>
+                        </td>
+                    </tr>
+                    <tr>
+                        <th>词语扩展</th>
+                        <td>
+                            <ul class="extend">
+                                <h5>Risk</h5>
+                                <li>风险</li>
+                                <li>危险</li>
+                                <li>冒险</li>
+                            </ul>
+                            <ul class="extend">
+                                <h5>Risk premium</h5>
+                                <li>风险溢价</li>
+                                <li>风险溢酬</li>
+                                <li>风险贴水</li>
+                            </ul>
+                            <ul class="extend">
+                                <h5>Systematic risk</h5>
+                                <li>系统性风险</li>
+                                <li>系统风险</li>
+                                <li>体系性风险</li>
+                            </ul>
                         </td>
                     </tr>
                 </tbody>
             </table>
-            <ul class="lib-refference">
-                <li><a href="">网站</a> / </li>
-                <li><a href="">源代码</a> / </li>
-                <li><a href="">其他版本&rarr;</a></li>
-            </ul>
-        </div>
-        <div class="lib">
-            <h2>twitter-boostrap</h2>
-            <p class="description">
-                Javascript plugins for the Twitter Bootstrap toolkit
-            </p>
-            <table>
-                <tbody>
-                    <tr>
-                        <th><small>[最新版]</small>1.1.0</th>
-                        <td>
-                            <pre>
-                                <code>http://cdn.staticfile.org/twitter-bootstrap/3.1.1/css/bootstrap-theme.css</code>
-                                <code>http://cdn.staticfile.org/twitter-bootstrap/3.1.1/css/bootstrap-theme.css.map</code>
-                                <code>http://cdn.staticfile.org/twitter-bootstrap/3.1.1/css/bootstrap-theme.min.css</code>
-                                <code>http://cdn.staticfile.org/twitter-bootstrap/3.1.1/css/bootstrap-theme.min.css</code>
-                                <code>http://cdn.staticfile.org/twitter-bootstrap/3.1.1/css/bootstrap-theme.min.css</code>
-                            </pre>
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
-            <ul class="lib-refference">
-                <li><a href="">网站</a> / </li>
-                <li><a href="">源代码</a> / </li>
-                <li><a href="">其他版本&rarr;</a></li>
-            </ul>
         </div>
     </div>
     <div id="footer">
-        <img src="static/image/qiniu.png" alt="七牛云存储"/>
-        <p><small>CDN 加速由七牛云存储提供</small></p>
-        <p><small>© Copyright 2014<a href="staticfile.org"><em>staticfile.org</em></a>.Built upon love</small></p>
+        <p><small>Designed by <a href="https://github.com/sofish">@sofish</a></small></p>
+        <p><small>© Copyright 2014<a href="https://github.com/sunivengg"><em> sunaiwen </em></a>.Built upon love.</small></p>
     </div>
+    <script>
+        (function(){
+            var url = 'http://fanyi.youdao.com/openapi.do?keyfrom=Kill-Words&key=679618694&type=data&doctype=jsonp&callback=getData&version=1.1&q=超级无聊';
+            var script = document.createElement('script');
+            script.setAttribute('src', url);
+            document.getElementsByClassName('head')[0].appendChild(script);
+            window.getData = function (obj){
+                console.log(
+                        obj
+                )
+            }
+        })();
+    </script>
 </body>
 </html>
