--- a/index.html
+++ b/index.html
@@ -1,27 +1,31 @@
 <!DOCTYPE html>
 <html ng-app="killws">
 <head>
-    <title>多引擎词典查询 - 记录查询历史，复习生词，推荐学习资源</title>
+    <title>kill words - 记录查询历史，复习生词，推荐学习资源</title>
     <meta name="viewport" content="width=device-width initial-scale=1.0 maximum-scale=1.0"/>
-    <meta name="description" content="多引擎词典查询 - 记录查询历史，复习生词，推荐学习资源"/>
+    <meta name="description" content="kill words - 记录查询历史，复习生词，推荐学习资源"/>
     <meta charset="utf-8"/>
     <link rel="stylesheet" href="static/css/style.css"/>
 </head>
-<body ng-controller="fetchData">
+<body ng-controller="viewController">
+
+<ng-view><!--we will load something here.--></ng-view>
+
+<div id="wrapper" ng-controller="fetchData">
     <div class="head">
         <div id="header">
             <a href="staticfile.org" id="title">Kill Words 词典</a>
             <ul id="entrance">
                 <li><a href="">查询历史</a> / </li>
                 <li><a href="">生词本</a> / </li>
-                <li><a href="">简介</a></li>
+                <li><a href="/about">简介</a></li>
             </ul>
         </div>
         <div id="purpose">
             <p>我们的目标是提供这样一个词典：它能查到你想查的单词和想翻译的句子。同时，也提供搜索查询历史和生词笔记的入口，让所有人都能复习自己查过的单词，而不是查过就算了。</p>
         <pre>如何使用：在搜索框中输入要查询的内容 <small>// <a href="https://github.com/staticfile/cli#readme">点击查看说明</a></small></pre>
         </div>
-        <div id="search"><input ng-change="check()" ng-model="query" type="text" placeholder="请输入查询内容 .." autofocus autocomplete="off"/></div>
+        <div id="search"><input ng-change="check()" ng-model="query" type="text" placeholder="请输入中文或英文 .." autofocus autocomplete="off"/></div>
         <div class="gh-info">
             <iframe ng-src="http://ghbtns.com/github-btn.html?user=sunivengg&amp;repo=Kill_Words&amp;type=watch&amp;count=true" allowtransparency="true" frameborder="0" height="20px" scrolling="0" width="85px" src="http://ghbtns.com/github-btn.html?user=sunivengg&amp;repo=Kill_Words&amp;type=watch&amp;count=true"></iframe>
             <iframe ng-src="http://ghbtns.com/github-btn.html?user=sunivengg&amp;repo=Kill_Words&amp;type=fork&amp;count=true" allowtransparency="true" frameborder="0" scrolling="0" width="95" height="20" src="http://ghbtns.com/github-btn.html?user=sunivengg&amp;repo=Kill_Words&amp;type=fork&amp;count=true"></iframe>
@@ -36,7 +40,7 @@
         <a href=""><img src="static/image/zepto.png" alt="zepto"/></a>
         <a href=""><img src="static/image/seajs.png" alt="seaJs"/></a>
     </div>
-    <div class="libs" >
+    <div class="libs">
         <p id="loading" ng-if="!loaded">I'm waiting...</p>
         <div class="lib" ng-if="loaded">
             <h2>{{data.title}}</h2>
@@ -69,7 +73,9 @@
         <p><small>Designed by <a href="https://github.com/sofish">@sofish</a></small></p>
         <p><small>© Copyright 2014<a href="https://github.com/sunivengg"><em> sunaiwen </em></a>.Built upon love.</small></p>
     </div>
+</div>
     <script src="static/js/angular.min.js"></script>
+    <script src="static/js/angular-route.min.js"></script>
     <script src="static/js/app.js"></script>
 </body>
 </html>
