--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 </head>
 <body ng-controller="viewController">
 
-<ng-view><!--we will load something here.--></ng-view>
+<div id="view-conponent">
+    <ng-view class="animate-hook"><!--we will load something here.--></ng-view>
+</div>
 
 <div id="wrapper" ng-controller="fetchData">
     <div class="head">
@@ -18,7 +20,7 @@
             <ul id="entrance">
                 <li><a href="">查询历史</a> / </li>
                 <li><a href="">生词本</a> / </li>
-                <li><a href="/about">简介</a></li>
+                <li><a ng-href="#" ng-click="showAbout()">简介</a></li>
             </ul>
         </div>
         <div id="purpose">
@@ -71,11 +73,28 @@
     </div>
     <div id="footer">
         <p><small>Designed by <a href="https://github.com/sofish">@sofish</a></small></p>
-        <p><small>© Copyright 2014<a href="https://github.com/sunivengg"><em> sunaiwen </em></a>.Built upon love.</small></p>
+        <p><small>&copy; Copyright 2014<a href="https://github.com/sunivengg"><em> sunaiwen </em></a>.Built upon love.</small></p>
+    </div>
+</div>
+
+
+<div ng-controller="aboutCtrl">
+    <div id="about" ng-if="showAbout.conponent">
+        <div id="ab-toolbar">
+            <a ng-href="#" ng-click="hideAbout()"></a>
+        </div>
+        <div class="ab-content">
+            <h1>关于 Kill Words</h1>
+            <p>这是个人的一个小项目。为了学习AngularJs而存在。</p>
+        </div>
+        <div id="ab-contact">
+            <a class="ic-github" target="_blank" href="http://github.com/sunivengg">g</a><a class="ic-weibo" target="_blank" href="http://weibo.com/sualwaysnai/">s</a><a class="ic-twitter" target="_blank" href="http://twitter.com/sunivengg">t</a><a href="javascript:void(0)" class="ic-email">e<span>sunivengg@gmail.com</span></a>
+        </div>
     </div>
 </div>
     <script src="static/js/angular.min.js"></script>
     <script src="static/js/angular-route.min.js"></script>
+    <script src="static/js/angular-animate.min.js"></script>
     <script src="static/js/app.js"></script>
 </body>
 </html>
