--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <ul id="entrance">
                 <li><a href="">查询历史</a> / </li>
                 <li><a href="">生词本</a> / </li>
-                <li><a ng-href="#" ng-click="showAbout()">简介</a></li>
+                <li><a href="javascript:void(0);" ng-click="showAbout()">简介</a></li>
             </ul>
         </div>
         <div id="purpose">
@@ -81,7 +81,7 @@
 <div ng-controller="aboutCtrl">
     <div id="about" ng-if="showAbout.conponent">
         <div id="ab-toolbar">
-            <a ng-href="#" ng-click="hideAbout()"></a>
+            <a href="javascript:void(0);" ng-click="hideAbout()"></a>
         </div>
         <div class="ab-content">
             <h1>关于 Kill Words</h1>
