--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             <div class="rect5"></div>
         </div>
     </div>
+    <script src="static/js/jquery.js"></script>
     <script src="static/js/angular.min.js"></script>
     <script src="static/js/angular-route.min.js"></script>
     <script src="static/js/angular-animate.min.js"></script>
