--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
     <script src="static/js/angular.min.js"></script>
     <script src="static/js/angular-route.min.js"></script>
     <script src="static/js/angular-animate.min.js"></script>
+    <script src="static/js/controllers.js"></script>
+    <script src="static/js/filters.js"></script>
+    <script src="static/js/service.js"></script>
     <script src="static/js/app.js"></script>
 </body>
 </html>
