add grunt bower and test

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <script src="static/js/angular.min.js"></script>
     <script src="static/js/angular-route.min.js"></script>
     <script src="static/js/angular-animate.min.js"></script>
+    <script src="static/js/angular-mocks.js"></script>
     <script src="static/js/controllers.js"></script>
     <script src="static/js/filters.js"></script>
     <script src="static/js/service.js"></script>
